--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "axios": "^0.19.0",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-property-decorator": "^8.2.1",
+    "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
