--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vue-loader": "^15.7.1",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.0.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
