--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
+    "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-property-decorator": "^8.2.1",
