--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.7",
     "vue-template-compiler": "^2.6.10",
-    "vuetify": "^2.0.2"
+    "vuetify": "1.5.16"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
