--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.7",
     "vue-template-compiler": "^2.6.10",
+    "vue2-timeago": "^1.2.2",
     "vuetify": "1.5.16"
   },
   "devDependencies": {
