--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qiita_clone",
   "private": true,
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@rails/webpacker": "^4.0.7",
     "axios": "^0.19.0",
     "ts-loader": "^6.0.4",
