--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vuetify": "1.5.16"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "webpack-dev-server": "^3.7.2"
   }
 }
