--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@rails/webpacker": "^4.0.7",
     "axios": "^0.19.0",
+    "marked": "^0.7.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "vee-validate": "^2.2.13",
